Version 0.9.1
- Fixes subkeys generation
- Adds support for embedded signatures

Version 0.9
- Fixes keys management (import/export issues).
- Fixes instances equality.
- Fixes partial packets with zero body length.
- Improves objects copying (NSCopying for packets).
- Reverts NSSet collections to NSArray.
- Updates public API (cleanups).
- Updates tests.
- Updates documentations.

Version 0.8
- Adds public and private keys generation feature with PGPKeyGenerator
- Adds methods to import and remove key instance
- Adds expirationDate property to a key instance
- Improves subkeys handling
- Exports keys data without reusing imported raw data.
- Fixes edge cases of decryption data with password encrypted key
- Fixes exporting private macros
- Fixes packets equality checks
- Fixes signature verifying flow, return on fail
- Fixes parsing corrupted input data.

Version 0.7
- Fixes TripleDSA decryption.
- Fixes MPI memleak.
- Fixes reading certificate sym. algs.
- Improves DSA keys support.
- Improves signature subpackets.
- Apply OpenPGP errata #2270.

Version 0.6.2
- Avoids assertion failing to decrypt packet when signing
- Supports "critical bit"

Version 0.6.1
- Adds PGPKey.keyID property
- Adds Swift Playground with a sample Swift code
- Builds dynamic frameworks for iOS and macOS
- Builds ObjC and Swift modules

Version 0.6
- Update public API
- Update documentation
- Use modern Objective-C
- Annotate nullability
- Improve PGPKey in the way that the single key consists of two partial keys. (#44)
- Improve support for private and public key in the single file (#44, #49)
- Calculate incremental S2K hash to reduce memory overhead (#49)
- Support for gnu-dummy S2K (#53)
- Fixes buffer overrun in RSA
- Build Static Frameworks for iOS and macOS
- Assume that by convention, the top-level key provides signature services
- Drop external openssl dependency.

Version 0.5
- Improve BZip2 compression
- Fix exporting keys
- Fix decryption for some RSA keys